[package]
name = "broadcaster"
version = "0.1.0"
edition = "2021"
description = "A server forwarding http requests to multiple target hosts simultaneously"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "4.4.6", features = ["derive"] }
flate2 = "1.0.28"
futures = "0.3.28"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["server", "tcp", "http1", "client"] }
partial_application = "0.2.1"
rand = "0.8.5"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["macros", "rt", "rt-multi-thread"] }
